# openGL

./: CMakeLists.txt  Shader.cpp  Shader.h  Vertext.vsh  main.cpp  main_4_2.cpp  main_5_1.cpp  shader_s.h
lib/: glad.c
